; ModuleID = '/home/carl/AnghaBench/systemd/src/journal-remote/extr_journal-upload-journal.c_check_journal_input.c'
source_filename = "/home/carl/AnghaBench/systemd/src/journal-remote/extr_journal-upload-journal.c_check_journal_input.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i64 }

@.str = private unnamed_addr constant [30 x i8] c"Failed to process journal: %m\00", align 1
@SD_JOURNAL_NOP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @check_journal_input(%struct.TYPE_5__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  %5 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 1
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %28

9:                                                ; preds = %1
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = call i32 @sd_journal_process(i32 %12)
  store i32 %13, i32* %4, align 4
  %14 = load i32, i32* %4, align 4
  %15 = icmp slt i32 %14, 0
  br i1 %15, label %16, label %22

16:                                               ; preds = %9
  %17 = load i32, i32* %4, align 4
  %18 = call i32 @log_error_errno(i32 %17, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0))
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %20 = call i32 @close_journal_input(%struct.TYPE_5__* %19)
  %21 = load i32, i32* %4, align 4
  store i32 %21, i32* %2, align 4
  br label %31

22:                                               ; preds = %9
  %23 = load i32, i32* %4, align 4
  %24 = load i32, i32* @SD_JOURNAL_NOP, align 4
  %25 = icmp eq i32 %23, %24
  br i1 %25, label %26, label %27

26:                                               ; preds = %22
  store i32 0, i32* %2, align 4
  br label %31

27:                                               ; preds = %22
  br label %28

28:                                               ; preds = %27, %1
  %29 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %30 = call i32 @process_journal_input(%struct.TYPE_5__* %29, i32 1)
  store i32 %30, i32* %2, align 4
  br label %31

31:                                               ; preds = %28, %26, %16
  %32 = load i32, i32* %2, align 4
  ret i32 %32
}

declare dso_local i32 @sd_journal_process(i32) #1

declare dso_local i32 @log_error_errno(i32, i8*) #1

declare dso_local i32 @close_journal_input(%struct.TYPE_5__*) #1

declare dso_local i32 @process_journal_input(%struct.TYPE_5__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
